@@ -1,4 +1,15 @@
 ------------------------------------------------------------------------
+r2164 | gaser | 2023-01-14 21:46:06
+
+Changed paths:
+ M CHANGES.txt
+ M cat_stat_check_SPM.m
+ M doc/index.html
+
+Changed: Updated CAT12 online manual (Orthogonalization).
+Fixed:   Corected err ro in cat_stat_check_SPM.m where the check for 
+         orthogonality was not correct recognized. 
+------------------------------------------------------------------------
 r2163 | gaser | 2023-01-12 17:59:59
 
 Changed paths:
